Add group by weekly support.

--- a/config.json
+++ b/config.json
@@ -38,7 +38,8 @@
   "普洱-成都": 1027,
   "文山-成都": 1021,
   "西双版纳-成都": 1161,
-  "西双版纳-昆明": 450
+  "西双版纳-昆明": 450,
+  "昆明-天津": 2210
 }, {
   "省内": ["西双版纳-昆明", "昆明-西双版纳", "昆明-丽江"],
   "西南": ["西双版纳-成都", "昆明-成都", "昆明-拉萨", "昆明-万州", "昆明-重庆", "普洱-成都", "文山-成都"],
